serve index.html and public files
